ADOP-2137: Code smell fixes