@@ -10,7 +10,6 @@ import uk.gov.hmcts.reform.adoption.adoptioncase.model.Parent;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.time.temporal.ChronoUnit.WEEKS;
@@ -128,6 +127,6 @@ public final class ValidationUtil {
 
     @SafeVarargs
     public static <E> List<E> flattenLists(List<E>... lists) {
-        return Stream.of(lists).flatMap(Collection::stream).collect(Collectors.toList());
+        return Stream.of(lists).flatMap(Collection::stream).toList();
     }
 }
